# clearance

./: .env.example  .gitignore  AGENTS.md  README.md  The_Clearance_PRD_v1.0.md  jest.config.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  script_2_demo.md
.claude/plans/: nifty-fluttering-rossum.md
anchor/: Anchor.toml  jest.config.ts
anchor/programs/clearance/: Cargo.toml
anchor/programs/clearance/src/: lib.rs
anchor/programs/spotr/: Cargo.toml
anchor/programs/spotr/src/: lib.rs
anchor/src/: clearance-exports.ts  index.ts  spotr-exports.ts
anchor/tests/: clearance.test.ts  spotr.test.ts
backups/: production-backup-2026-04-04.dump
mobile/: app.json  babel.config.js  credentials.json  eas.json  metro.config.js  package-lock.json  package.json  polyfills.ts  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/components/: BlindBoxCard.tsx  Button.tsx  Card.tsx  ConnectWallet.tsx  Input.tsx  MatchupPicker.tsx  ProgressBar.tsx  RoundTimer.tsx  SessionStateDisplay.tsx  VideoPlayer.tsx
mobile/lib/: api.ts  auth.ts  notifications.ts  solana.ts  (+4 more)
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: backfill-display-names.ts  backfill-video-stats.ts  check-guests.ts  check-users.ts  clear-and-reseed.ts  deploy-cost.sh  dev-local.sh  devnet-raffle-smoke.ts  export-server-data.ts  load-test-150.ts  make-admin.ts  process-videos.ts  seed-demo.ts  seed-season-2.ts  seed-videos-dev.ts  seed-videos.ts  setup-demo.ts  setup-mint.ts
shared/: constants.ts  types.ts
src/: instrumentation.ts  proxy.ts
(+193 files in other folders)
