[package]
name = "clearance"
version = "0.1.0"
description = "Clearance USDC vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
testing = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token", "token"] }
solana-instructions-sysvar = ">=2.2.2"
solana-account-info = ">=2.3.0"
ephemeral-vrf-sdk = { version = "0.1", features = ["anchor"] }
